--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+
 </head>
 <body>
-    <h1> Todo App</h1>
+    <h1  style ="margin-top:50px" class ="ui center aligned header"> Todo App</h1>
 
-<form action="/add" method="POST"> <! --causes the form to execute the add function -->
+<form class="ui form" action="/add" method="POST"> <! --causes the form to execute the add function -->
 <div >
     <label for="title"> Todo Title</label>
     <input type="text" name="title" placeholder="Enter Todo Task">
@@ -19,16 +22,18 @@
 </div>
 
 </form>
-    coolio
 {% for tasks in tasks_table %}
-    <p>{{tasks[0] }} | {{tasks[1]}}</p>
+    <div class = "ui green segment">
+    <p class="ui big header">{{tasks[0] }} | {{tasks[1]}}</p>
     {% if tasks[2]== False %}
-    <span> Not Completed</span>
+    <span class = "ui gray label"> Not Completed</span>
     {% else %}
-    <span>Completed</span>>
+    <span class="ui green label"> Completed</span>
     {% endif %}
-    <a href="/update/{{tasks[0]}}" >Update </a>
-    <a href="/delete/{{tasks[0]}}">Delete</a>
+    <a class = "ui blue button" href="/update/{{tasks[0]}}" >Update </a>
+    <a class = "ui red button" href="/delete/{{tasks[0]}}">Delete</a>
+
+        </div>
 {% endfor %}
 </body>
 </html>
