--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App</title>
@@ -8,32 +10,35 @@
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 
 </head>
+
 <body>
-    <h1  style ="margin-top:50px" class ="ui center aligned header"> Todo App</h1>
+<div style ="margin-top:50px" class="ui container">
+
+    <h1 class ="ui center aligned header"> Todo App</h1>
 
 <form class="ui form" action="/add" method="POST"> <! --causes the form to execute the add function -->
-<div >
-    <label for="title"> Todo Title</label>
+    <div >
     <input type="text" name="title" placeholder="Enter Todo Task">
     <br>
-
-    <button type ="submit"> Add</button>
-
+    <div style ="margin-top:10px" class="ui container">
+    <button style = "" class = "ui blue button" type ="submit"> Add</button>
+ </div>
 </div>
 
 </form>
 {% for tasks in tasks_table %}
     <div class = "ui green segment">
-    <p class="ui big header">{{tasks[0] }} | {{tasks[1]}}</p>
+    <p class="ui big header">{{tasks[1]}}</p>
     {% if tasks[2]== False %}
     <span class = "ui gray label"> Not Completed</span>
     {% else %}
-    <span class="ui green label"> Completed</span>
+    <span class = "ui green label"> Completed</span>
     {% endif %}
     <a class = "ui blue button" href="/update/{{tasks[0]}}" >Update </a>
     <a class = "ui red button" href="/delete/{{tasks[0]}}">Delete</a>
 
         </div>
 {% endfor %}
+    </div>
 </body>
 </html>
